--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1025,6 +1025,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfEnronFull.to_csv('./Processed-Datasets/Enron-Bodies/emails.csv')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
