--- a/classif.ipynb
+++ b/classif.ipynb
@@ -283,12 +283,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Unnamed: 0', 'file', 'message']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(pd.read_csv('./Processed-Datasets/Enron-Bodies/emails.csv', nrows=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_processed_enron():\n",
-    "    return pd.read_csv('./Processed-Datasets/Enron-Bodies/emails.csv', index_col=0, names=['id', 'file', 'message'])"
+    "    col_names=['id', 'file' 'message']\n",
+    "    dfEnronFull = pd.read_csv('./Processed-Datasets/Enron-Bodies/emails.csv', index_col=0, usecols=['Unnamed: 0', 'message'])\n",
+    "\n",
+    "    return dfEnronFull"
    ]
   },
   {
@@ -303,12 +326,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "#comment if you're running enron for first time\n",
     "dfEnronFull = load_processed_enron()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Here is our forecast\\n\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Traveling to have a business meeting takes the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>test successful.  way to go!!!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Randy,\\n\\n Can you send me a schedule of the s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Let's shoot for Tuesday at 11:45.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517396</th>\n",
+       "      <td>This is a trade with OIL-SPEC-HEDGE-NG (John L...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517397</th>\n",
+       "      <td>Some of my position is with the Alberta Term b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517398</th>\n",
+       "      <td>2\\n\\n -----Original Message-----\\nFrom: \\tDouc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517399</th>\n",
+       "      <td>Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517400</th>\n",
+       "      <td>i think the YMCA has a class that is for peopl...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>517401 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  message\n",
+       "0                               Here is our forecast\\n\\n \n",
+       "1       Traveling to have a business meeting takes the...\n",
+       "2                          test successful.  way to go!!!\n",
+       "3       Randy,\\n\\n Can you send me a schedule of the s...\n",
+       "4                     Let's shoot for Tuesday at 11:45.  \n",
+       "...                                                   ...\n",
+       "517396  This is a trade with OIL-SPEC-HEDGE-NG (John L...\n",
+       "517397  Some of my position is with the Alberta Term b...\n",
+       "517398  2\\n\\n -----Original Message-----\\nFrom: \\tDouc...\n",
+       "517399  Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...\n",
+       "517400  i think the YMCA has a class that is for peopl...\n",
+       "\n",
+       "[517401 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEnronFull"
    ]
   },
   {
